syntax = "proto3";

package preferences;

option go_package = "proto/";

service SettingsService {
  rpc GetSettings(GetSettingsRequest) returns (GetSettingsResponse);
  rpc CreateSettings(CreateSettingsRequest) returns (CreateSettingsResponse);
}

message CreateSettingsRequest {
  string guild_id = 1;
}

message CreateSettingsResponse {
  string id = 1;
  string guild_id = 2;
  RolesSettings roles = 3;
  WelcomeSettings welcome = 4;
  LogSettings log = 5;
  AutoModSettings automode = 6;
}

message GetSettingsRequest {
  string guild_id = 1;
}

message GetSettingsResponse {
  string id = 1;
  string guild_id = 2;
  RolesSettings roles = 3;
  WelcomeSettings welcome = 4;
  AutoModSettings automode = 5;
  LogSettings log = 6;
}

message RolesSettings {
  string message_id = 1;
  map<string, string> matching = 2; // role_id -> emoji
}

message WelcomeSettings {
  string channel_id = 1;
  repeated string messages = 2;
}

message AutoModSettings {
    string id = 1;
    string guild_id = 2;
    repeated CapsLock caps_lock = 3;
    repeated AntiLink anti_link = 4;
    repeated BannedWord banned_words = 5;
    bool enabled = 6;
}

message LogSettings {
    string id = 1;
    string guild_id = 2;
    repeated EventsType events = 3;
    bool enabled = 4;
}

message EventsType {
    string event_type = 1;
    string channel_id = 2;
}

message CapsLock {
    string id = 1;
    string channel_id = 2;
}

message AntiLink {
    string id = 1;
    string channel_id = 2;
}

message BannedWord {
    string id = 1;
    string word = 2;
}