syntax = "proto3";

package settings;

option go_package = "proto/";

service SettingsService {
  rpc GetSettingsByGuild(GetSettingsByGuildRequest) returns (GetSettingsByGuildResponse);
  rpc CreateGuildSettings(CreateGuildSettingsRequest) returns (CreateGuildSettingsResponse);
  rpc UpdateRolesSettings(UpdateRolesSettingsRequest) returns (UpdateRolesSettingsResponse);
}


message RolesSettings {
  string message_id = 1;
  map<string, string> matching = 2;
}

message GuildSettings {
  string id = 1;
  string guild_id = 2;
  RolesSettings roles = 3;
}

// --- Запросы и ответы для методов ---

message GetSettingsByGuildRequest {
  string guild_id = 1;
}
message GetSettingsByGuildResponse {
  GuildSettings settings = 1;
}

message UpdateRolesSettingsRequest {
  string guild_id = 1;
  RolesSettings roles = 2;
}

message UpdateRolesSettingsResponse {
  GuildSettings guild_settings = 1;
}

message CreateGuildSettingsRequest {
  string guild_id = 1;
}

message CreateGuildSettingsResponse {
  string guild_id = 1;
}
